# starfishos

./: .clang-format  .gdbinit  .gitignore  .gitmodules  0001-Add-futex-support-and-related-system-calls.patch  Agents.md  CLAUDE.md  CMakeLists.txt  Dockerfile  IPC_BENCHMARK_QUICK_START.md  IPC_TEST_RESULTS.md  Makefile  QUEUE_OPS_ANALYSIS.md  README.md  TIMING_CONFIG.md  TODO.md  analyze_pr_structures.py  artificial_eval.md  bench_malloc_results.csv  breakdown_data.csv  cdf_data.csv  chbuild  chcore.ini  chpm  config.cmake  func4.py  ipc_benchmark_results.csv  mem_perf_checker.sh  parse_vmspace_stats.py  qemu-trace-events.txt  quick-build.sh  sim.sh  simulate_cluster.sh  start_several_qemu.sh  test_baseline_output.txt
kernel/: CMakeLists.txt  config.cmake  dsm_config.cmake  incbin.tpl.S  ipc_perf_config.cmake  sls_config.cmake
kernel/arch/x86_64/: CMakeLists.txt  main.c
kernel/ckpt/: CMakeLists.txt  ckpt.c  ckpt_ipi.c  ckpt_object_pool.c  ckpt_object_pool.h  ckpt_objects.h  ckpt_page.c  ckpt_page.h  ckpt_ws.c  ckpt_ws.h  external_sync.c  hot_pages_tracker.c  hybird_mem.c  restore.c
kernel/ckpt-ssi/: CMakeLists.txt  cap_group_kvs.c  cfork.c  cfork.h  cfork_ops.c  ckpt.c  ckpt_ipi.c  ckpt_log.h  ckpt_object_pool.c  ckpt_object_pool.h  ckpt_objects.h  ckpt_page.c  ckpt_page.h  ckpt_process.c  ckpt_sys_services.c  ckpt_time_traveling.c  ckpt_ws.c  ckpt_ws.h  external_sync.c  hot_pages_tracker.c  log.h  restore.c
kernel/ckpt-ssi/ckpt_objects/: cap_group.c  connection.c  irq.c  notification.c  page_table.c  pmobject.c  thread.c  vmspace.c
kernel/ckpt/ckpt_objects/: cap_group.c  connection.c  irq.c  notification.c  pmobject.c  thread.c  vmspace.c
kernel/drivers/: CMakeLists.txt
kernel/drivers/cxl/: CMakeLists.txt  cxl.c  hdm_decoder.c
kernel/drivers/ivshmem/: CMakeLists.txt  ivshmem.c
kernel/drivers/pci/: CMakeLists.txt  cxl.c  cxl_hdm_decoder.c  ivshmem.c  pci.c  pci_ioctl.c  pci_main.c  pci_names.c  pci_utils.c  vfio_ioctl.c  virtio.c
kernel/dsm/: .dsm_config.c  CMakeLists.txt  dsm_config.c  dsm_metadata.c  dsm_migrate.c  dsm_ref.c  dsm_services_map.c  dsm_tiering.c  dsm_tiering.h  log.h
kernel/dsm/dsm_objects/: cap_group.c  connection.c  irq.c  notification.c  page.c  pmobject.c  thread.c  vmspace.c
kernel/include/ckpt/: ckpt-dsm.h  ckpt.h  ckpt_data.h  external_sync.h  hot_pages_tracker.h  hybird_mem.h
kernel/include/common/: asm.h  backtrace.h  bitfield.h  bitops.h  checksum.h  debug.h  endianness.h  errno.h  hashtable.h  kprint.h  kvstore.h  list.h  lock.h  macro.h  mem_sync.h  radix.h  rbtree.h  rbtree_impl.h  size.h  stdarg.h  types.h  util.h  vars.h  waitlist.h
kernel/include/drivers/: cxl-pci.h  cxl.h  io.h  ioctl.h  ivshmem.h  pci-regs.h  pci-special.h  pci.h  pci_cxl.h  pci_ioctl.h  pci_log.h  pci_names.h  pci_regs.h  pci_virtio_names.h  resource.h  vfio.h
kernel/include/dsm/: .dsm.h  dsm-config.h  dsm-mmconfig.h  dsm-single.h  dsm.h  dsm_ref.h  perf_timing.h  tiering.h
kernel/include/io/: uart.h
kernel/include/ipc/: connection.h  futex.h  notification.h
kernel/include/irq/: ipi.h  irq.h  timer.h
kernel/include/lib/: elf.h  fw_cfg.h  printk.h  ring_buffer.h
kernel/include/mm/: buddy.h  kmalloc.h  memory.c  mm.h  numa.h  nvm.h  page.h  page_table_func.h  rmap.h  shm.h  slab.h  uaccess.c  uaccess.h  vmspace.h
kernel/include/object/: cap_group.h  endpoint.h  irq.h  memory.h  object.h  recycle.h  thread.h  user_fault.h
kernel/include/perf/: measure.h
kernel/include/posix/: dirent.h  time.h
kernel/include/sched/: context.h  fpu.h  sched.h
kernel/include/uapi/: types.h
kernel/include/virt/: feature.h  ipa_region.h  mmu.h  stage2_mmu.h  stage2_mmu_def.h  vcpu.h  vgic.h  virq.h  virt.h  virt_cmd_dispatcher.h  vm.h  vmexit_def.h  vpsci.h  vtimer.h
kernel/ipc/: CMakeLists.txt  connection.c  futex.c  notification.c
kernel/irq/: ipi.c  timer.c
kernel/lib/: CMakeLists.txt  fw_cfg.c  printk.c  radix.c  rbtree.c  ring_buffer.c  snprintf.c  springf.c  string.c
kernel/mm/: CMakeLists.txt  buddy-lock-free.c  buddy.c  cxl_alloc.c  cxl_slab.c  dram_alloc.c  dram_slab.c  kmalloc.c  mm.c  pgfault_handler.c  rmap.c  shm.c  slab.c  temp_slab.c  vmregion.c
kernel/mm/cxl/: cxl_alloc.c  cxl_slab.c
kernel/mm/llfree/: bitfield.c  bitfield.h  bitops.h  child.c  child.h  llfree.c  llfree_inner.h  llfree_platform.h  local.c  local.h  lower.c  lower.h  tree.c  tree.h  trees.c  trees.h  utils.h
kernel/mm/sls/: rmap.c
kernel/mm/temp/: temp_alloc.c  temp_slab.c
kernel/object/: CMakeLists.txt  cap_group.c  capability.c  irq.c  memory.c  recycle.c  set_thread_env.c  thread.c  thread_env.h  user_fault.c
kernel/sched/: CMakeLists.txt  context.c  policy_pbrr.c  policy_rr.c  sched.c
kernel/syscall/: syscall.c  syscall_hooks.c  syscall_num.h
kernel/tests/: CMakeLists.txt  gen_random_mf_data.py  tests.c  tests.h  tst_malloc.c  tst_malloc_data.c  tst_mutex.c  tst_rwlock.c  tst_sched.c  tst_slab_recovery.c
user/: .gitignore  CMakeLists.txt  Chconfig  config.cmake
user/demos/: CMakeLists.txt  config.cmake
user/libraries/: CMakeLists.txt  config.cmake
user/musl-1.1.24/: Makefile  conf84-1-1.c
user/sample-apps/: CMakeLists.txt  config.cmake
user/script/: cnn_bind_cpu.txt  cross_stress_type1_m0.sh  cross_stress_type1_m1.sh  cross_stress_type2_m0.sh  cross_stress_type2_m1.sh  cross_stress_type3_m0.sh  cross_stress_type3_m1.sh  cross_stress_type4_m0.sh  cross_stress_type4_m1.sh  cross_stress_type5_m0.sh  cross_stress_type5_m1.sh  cross_stress_type6_m0.sh  cross_stress_type6_m1.sh  dbx1000_bind_cpu.txt  gemini_bind_cpu.txt  matrix_multiply_bind_cpu.txt  run_cnn.sh  run_dbx1000.sh  run_gemini.sh  run_kmeans.sh  run_leveldb.sh  run_linear_regression.sh  run_llama.sh  run_matrix.sh  run_matrix_multiply.sh  run_memcached.sh  run_pca.sh  run_redis.sh  run_shm.sh  run_string_match.sh  run_word_count.sh  single_stress_type1.sh  single_stress_type2.sh  single_stress_type3.sh  single_stress_type4.sh  single_stress_type5.sh  single_stress_type6.sh
user/sys-include/: README.md  dev_messenger
user/system-servers/: CMakeLists.txt  config.cmake
(+972 files in other folders)
